[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civilpy"
version = "0.3.1"
description = "Civil Engineering Tools in Python"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Dane Parks", email = "Dane@daneparks.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "sympy>=1.10",
    "matplotlib>=3.7",
    "scipy>=1.11",
    "Pint>=0.20",
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "Pillow>=10.0",
    "openpyxl>=3.1",
    "termcolor>=1.1",
    "natsort>=8.2",
    "rich>=13.0",
    "typing_extensions>=4.0",
    "ezdxf>=1.1",
]

[project.optional-dependencies]
db = [
    "SQLAlchemy>=2.0",
    "psycopg>=3.2",
    "psycopg-binary>=3.2",
    "oracledb>=2.0",
    "sshtunnel>=0.4",
]
pdf = [
    "PyMuPDF>=1.23",
    "camelot-py>=0.11",
    "pytesseract>=0.3",
]
geo = [
    "folium>=0.14",
    "tifftools>=1.3",
]
web = [
    "selenium>=3.141",
    "plotly>=5.0",
]
jupyter = [
    "nbformat>=5.7",
    "nbconvert>=7.0",
    "ipywidgets>=8.0",
    "ipykernel>=6.0",
]
validation = [
    "pydantic>=2.0",
    "pydantic_core>=2.0",
    "python-dotenv>=1.0",
]
cande = [
    "cande-wrapper>=0.1",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
full = [
    "civilpy[db,pdf,geo,web,jupyter,validation]",
    "FreeSimpleGUI>=5.0",
]

[project.urls]
Homepage = "https://daneparks.com/Dane/civilpy"
Documentation = "https://dane.daneparks.com/civilpy"
Repository = "https://daneparks.com/Dane/civilpy"

[project.scripts]
civilpy = "civilpy.CLI:civilpy_cli"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "Notebooks*", "secrets*", "docs*", "res*"]

[tool.setuptools.package-data]
civilpy = ["structural/res/*.csv", "structural/odot/res/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
include = ["*/src/*"]
branch = true
omit = [
    "tests",
    ".tox/*",
    "docs/*",
    "res*",
    "Training/*",
    "venv/*",
    "*/state/ohio/*",
    "*/general/bentley/*",
    "*/general/database_tools.py",
    "*/general/photos.py",
    "*/general/jupyter.py",
    "*/structural/steel_db_temp.py",
]
timid = true
parallel = true
